[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.1",
    "pypdf>=6.13.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.58.0",
    "tokenizers>=0.22,<0.24",
    "transformers>=4.56,<5",
]
